--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Matrix
-Version: 1.1-0
-Date: 2013-10-13
+Version: 1.1-1
+Date: 2013-12-23
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
-Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
+Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
 Maintainer: Martin Maechler <mmaechler+Matrix@gmail.com>
 Contact: Doug and Martin <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
@@ -14,8 +14,7 @@ Suggests: expm, MASS
 Enhances: MatrixModels, graph, SparseM, sfsmisc
 Encoding: UTF-8
 LazyData: no
-LazyDataNote: no longer available, since we use data/*.R *and* our
-        classes
+LazyDataNote: not possible, since we use data/*.R *and* our classes
 ByteCompile: yes
 BuildResaveData: no
 License: GPL (>= 2)
@@ -24,7 +23,7 @@ LicenseNote: The Matrix package includes libraries AMD, CHOLMOD,
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2013-10-21 12:30:53 UTC; maechler
+Packaged: 2013-12-28 18:48:39 UTC; maechler
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-10-25 08:49:11
+Date/Publication: 2013-12-29 07:43:35
