--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.1-2-2
-Date: 2014-03-03
+Version: 1.1-3
+Date: 2014-03-26
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -23,7 +23,7 @@ LicenseNote: The Matrix package includes libraries AMD, CHOLMOD,
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2014-03-04 07:35:39 UTC; maechler
+Packaged: 2014-03-30 16:34:00 UTC; maechler
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-03-04 13:32:50
+Date/Publication: 2014-03-31 12:51:10
