--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.1-5
-Date: 2015-01-18
+Version: 1.1-5-1
+Date: 2015-03-23
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -23,7 +23,7 @@ LicenseNote: The Matrix package includes libraries AMD, CHOLMOD,
         Davis.  All sections of that code are covered by the GPL or
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2015-01-17 23:53:55 UTC; maechler
 NeedsCompilation: yes
+Packaged: 2015-03-23 15:44:22 UTC; maechler
 Repository: CRAN
-Date/Publication: 2015-01-18 19:49:49
+Date/Publication: 2015-03-23 22:33:36
