--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.2-0
-Date: 2015-04-03
+Version: 1.2-1
+Date: 2015-05-30
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
@@ -8,8 +8,8 @@ Maintainer: Martin Maechler <mmaechler+Matrix@gmail.com>
 Contact: Doug and Martin <Matrix-authors@R-project.org>
 Description: Classes and methods for dense and sparse matrices and
     operations on them using 'LAPACK' and 'SuiteSparse'.
-Depends: R (>= 2.15.2), methods
-Imports: graphics, grid, stats, utils, lattice
+Depends: R (>= 3.0.1)
+Imports: methods, graphics, grid, stats, utils, lattice
 Suggests: expm, MASS
 Enhances: MatrixModels, graph, SparseM, sfsmisc
 Encoding: UTF-8
@@ -24,6 +24,6 @@ LicenseNote: The Matrix package includes libraries AMD, CHOLMOD,
         LGPL licenses.  See the directory doc/UFsparse for details.
 URL: http://Matrix.R-forge.R-project.org/
 NeedsCompilation: yes
-Packaged: 2015-04-03 21:19:32 UTC; maechler
+Packaged: 2015-06-01 10:18:55 UTC; maechler
 Repository: CRAN
-Date/Publication: 2015-04-04 16:16:00
+Date/Publication: 2015-06-01 17:38:08
